python-dmidecode (2.10.4-1) unstable; urgency=low

  * Upstream release - purely to do with rpm packaging.

 -- Nima Talebi <nima@it.net.au>  Sun, 08 Mar 2009 22:26:59 +1100

python-dmidecode (2.10.3-1) unstable; urgency=low

  * Upstream release - separate setup.py for debug and non-debug versions of
    python-dmidecode (Closes: #516358).

 -- Nima Talebi <nima@it.net.au>  Mon, 23 Feb 2009 00:34:11 +1100

python-dmidecode (2.10.2-1) unstable; urgency=low

  * Upstream release.
  * Added upstream changelog.
  * Added hopepage to the control file.
  * Change (C) to © in the copyright.
  * Changed generic (GPL) license to specific (GPL-3).

 -- Nima Talebi <nima@it.net.au>  Fri, 13 Feb 2009 06:36:30 -0800

python-dmidecode (2.10.1-3) unstable; urgency=low

  * Updated copyright file.

 -- Nima Talebi <nima@it.net.au>  Wed, 14 Jan 2009 13:24:58 -0800

python-dmidecode (2.10.1-2) unstable; urgency=low

  * Fixed watchfile.

 -- Nima Talebi <nima@it.net.au>  Mon, 12 Jan 2009 23:43:17 -0800

python-dmidecode (2.10.1-1) unstable; urgency=low

  * The separation between the upstream and the debian files is now complete.

 -- Nima Talebi <nima@it.net.au>  Mon, 12 Jan 2009 00:19:29 -0800

python-dmidecode (2.10-2) unstable; urgency=low

  * Conform the the latest Lintian rules.

 -- Nima Talebi <nima@it.net.au>  Sun, 11 Jan 2009 15:04:58 -0800

python-dmidecode (2.10-1) unstable; urgency=low

  * Initial release (Closes: #509169)

 -- Nima Talebi <nima@it.net.au>  Fri, 19 Dec 2008 14:04:16 +0900
