@@ -1,8 +1,9 @@
 python-dmidecode (2.10.4-1) unstable; urgency=low
 
   * Upstream release - purely to do with rpm packaging.
+  * Added upstream changelog.
 
- -- Nima Talebi <nima@it.net.au>  Sun, 08 Mar 2009 22:26:59 +1100
+ -- Nima Talebi <nima@it.net.au>  Mon, 09 Mar 2009 00:45:19 +1100
 
 python-dmidecode (2.10.3-1) unstable; urgency=low
 
